
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 scalar_t__ isdigit (char) ;
 int printf (char*,char*) ;

void checkstatus(char *s)
{
    if(s==((void*)0)) exit(-1);
    if(isdigit(*s))
    {
        if(s[0]=='5')
        {
            printf("[-] Server told:%s\n",s);
            exit(-1);
        }
        else return;
    }

    printf("[-] Server said:%s\n",s);
    exit(-1);
}
