; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_426.c_checkstatus.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_426.c_checkstatus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"[-] Server told:%s\0A\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"[-] Server said:%s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @checkstatus(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp eq i8* %3, null
  br i1 %4, label %5, label %7

5:                                                ; preds = %1
  %6 = call i32 @exit(i32 -1) #3
  unreachable

7:                                                ; preds = %1
  %8 = load i8*, i8** %2, align 8
  %9 = load i8, i8* %8, align 1
  %10 = call i64 @isdigit(i8 signext %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %23

12:                                               ; preds = %7
  %13 = load i8*, i8** %2, align 8
  %14 = getelementptr inbounds i8, i8* %13, i64 0
  %15 = load i8, i8* %14, align 1
  %16 = sext i8 %15 to i32
  %17 = icmp eq i32 %16, 53
  br i1 %17, label %18, label %22

18:                                               ; preds = %12
  %19 = load i8*, i8** %2, align 8
  %20 = call i32 @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %19)
  %21 = call i32 @exit(i32 -1) #3
  unreachable

22:                                               ; preds = %12
  ret void

23:                                               ; preds = %7
  %24 = load i8*, i8** %2, align 8
  %25 = call i32 @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i8* %24)
  %26 = call i32 @exit(i32 -1) #3
  unreachable
}

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #1

declare dso_local i64 @isdigit(i8 signext) #2

declare dso_local i32 @printf(i8*, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
